--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1374,41 +1374,41 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 	/* Default styling */
 	html {
 		font-size: 55%;
-		}
+	}
 
-		/* Home page */
+	/* Home page */
 
-#hero-area {
-	background: url('../images/home-page-small.jpg');
-	height: 700px;
-	width: 100%;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
+	#hero-area {
+		background: url('../images/home-page-small.jpg');
+		height: 700px;
+		width: 100%;
+		background-repeat: no-repeat;
+		background-size: cover;
+	}
 
-#hero-text {
-	height: 420px;
-	width: 300px;
-	top: 250px;
-}
+	#hero-text {
+		height: 420px;
+		width: 300px;
+		top: 250px;
+	}
 
-#hero-text p {
-	padding-top: 5px;
-}
+	#hero-text p {
+		padding-top: 5px;
+	}
 
-#hero-text h3 {
-	padding-top: 5px;
-}
+	#hero-text h3 {
+		padding-top: 5px;
+	}
 
-.text-area {
-	margin-left: 10px;
-	line-height: 130%;
-}
+	.text-area {
+		margin-left: 10px;
+		line-height: 130%;
+	}
 
-#learn-more {
-	margin: 30px 20px 0 20px;
-}
-	
+	#learn-more {
+		margin: 30px 20px 0 20px;
+	}
+
 	/* About page */
 	/* Classes used across page */
 
@@ -1462,7 +1462,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 	.play-image-internal {
 		margin: 100px 30px;
 	}
-	
+
 
 	/* Help with Anxiety */
 	#anxiety-img {
@@ -1474,7 +1474,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 		width: 650px;
 	}
 
-	
+
 	.anxiety-activity {
 		width: 150px;
 		height: 150px;
@@ -1512,4 +1512,79 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 		right: 0.2%;
 		padding: 20px 40px 20px 20px;
 	}
+}
+
+@media screen and (max-width: 702px) {
+
+	/* Header */
+
+	#header {
+		width: 100%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+	}
+
+	#logo {
+		letter-spacing: 0;
+	}
+
+	/* Nav */
+
+	#menu {
+		font-size: 100%;
+	}
+
+	#menu ul {
+		width: auto;
+	}
+
+	#menu li {
+		display: list-item;
+		width: auto;
+	}
+
+	#menu li:not(:first-child):before {
+		content: "";
+	}
+
+
+	.sticky+.content {
+		padding-top: 90px;
+	}
+
+	/* Dropdown menu */
+
+.dropdown-content {
+	min-width: 150px;
+	margin-left: -70px;
+
+	/* Footer */
+
+	footer li {
+		font-size: 120%;
+	}
+
+	/* Homepage */
+
+	#hero-area {
+		height: 400px;
+		max-width: 800px;
+	}
+
+	#hero-text {
+		height: 250px;
+		width: 230px;
+		top: 230px;
+		left: 40px;
+		font-size: 1.2rem;
+		padding: 10px;
+	}
+
+	#learn-more {
+		font-size: 1.5rem;
+		margin-top: 15px;
+		margin-left: 10px;
+	}
+
 }
