--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -222,6 +222,11 @@ footer li {
 
 /* Home page */
 
+#home-page {
+	display: flex;
+	flex-direction: row;
+}
+
 #hero-area {
 	background: url('../images/home-page.jpg');
 	height: 1000px;
@@ -232,6 +237,7 @@ footer li {
 	position: relative;
 	z-index: -1;
 	margin: 0 auto;
+
 }
 
 #hero-text {
@@ -609,8 +615,9 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
 #young-boy-sandpit {
 	visibility: hidden;
-    height: 0px;
-     width: 0px;}
+	height: 0px;
+	width: 0px;
+}
 
 #contact-us-area {
 	text-align: left;
@@ -1274,7 +1281,40 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 	}
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1044px) {
+
+	/* Home Page */
+
+	#home-page {
+		display: flex;
+		flex-direction: column;
+		height: 1000px;
+	}
+
+	#hero-area {
+		height: 400px;
+		border-bottom: solid white 10px;
+	}
+
+	#hero-text {
+		height: 320px;
+		width: 400px;
+		padding: 5px;
+		top: 720px;
+		left: 50%;
+		right: 50%;
+		transform: translate(-50%, -50%);
+		text-align: center;
+	}
+
+	.text-area {
+		margin-left: 0px;
+	}
+
+	#learn-more {
+		margin: 30px 20px 0 20px;
+	}
+
 
 	/* About page */
 	/* Classes used across page */
@@ -1361,391 +1401,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
 
 	/* Get In Touch */
-	#contact-us-area {
-		height: 1200px;
-	}
-
-	/* Form */
-	#form-background {
-		width: 680px;
-		bottom: 5%;
-		right: 0.2%;
-		padding: 20px 40px 20px 20px;
-	}
-}
-
-@media screen and (max-width: 873px) {
-
-	/* Default styling */
-	html {
-		font-size: 55%;
-	}
-
-	/* Home page */
-
-	#hero-area {
-		background: url('../images/home-page-small.jpg');
-		height: 700px;
-		width: 100%;
-		background-repeat: no-repeat;
-		background-size: cover;
-	}
-
-	#hero-text {
-		height: 420px;
-		width: 300px;
-		top: 250px;
-	}
-
-	#hero-text p {
-		padding-top: 5px;
-	}
-
-	#hero-text h3 {
-		padding-top: 5px;
-	}
-
-	.text-area {
-		margin-left: 10px;
-		line-height: 130%;
-	}
-
-	#learn-more {
-		margin: 30px 20px 0 20px;
-	}
-
-	/* About page */
-	/* Classes used across page */
-
-	.solid-background {
-		width: 650px;
-	}
-
-	.solid-orange {
-		line-height: 100%;
-	}
-
-	.square-image {
-		width: 150px;
-		height: 150px;
-	}
-
-	/* What is sensory play? */
-	.right-align {
-		width: 400px;
-		line-height: 100%;
-	}
-
-	.left-align {
-		width: 400px;
-		line-height: 100%;
-	}
-
-	.senses-info-left {
-		width: 650px;
-	}
-
-	.senses-info-right {
-		width: 650px;
-	}
-
-	/* Play in Motion */
-	#iframe {
-		width: 500px;
-		height: 400px;
-	}
-
-	/* Top 10 Activities */
-	#top10-pane {
-		width: 650px;
-	}
-
-	.activities-style {
-		width: 400px;
-	}
-
-	.play-image-internal {
-		margin: 100px 30px;
-	}
-
-
-	/* Help with Anxiety */
-	#anxiety-img {
-		width: 450px;
-		height: 300px;
-	}
-
-	#anxiety-pane {
-		width: 650px;
-	}
-
-
-	.anxiety-activity {
-		width: 150px;
-		height: 150px;
-	}
-
-
-	/* Hear from Each Other */
-
-	.feed-sub {
-		width: 650px;
-	}
-
-	.feedback-section {
-		width: 650px;
-	}
-
-	.feedback-grid {
-		width: 300px;
-		height: 240px;
-		padding: 8px 5px 5px 5px;
-		margin: 8px 3px 3px 5px;
-	}
-
-
-	/* Get In Touch */
-	#contact-us-area {
-		height: 1000px;
-		background-position: 50% 30%;
-	}
-
-	/* Form */
-	#form-background {
-		width: 600px;
-		bottom: 5%;
-		right: 0.2%;
-		padding: 20px 40px 20px 20px;
-	}
-}
-
-@media screen and (max-width: 702px) {
-
-	/* Default styling */
-	html {
-		font-size: 50%;
-	}
-
-	/* Header */
-
-	#header {
-		width: 100%;
-		height: auto;
-		display: flex;
-		flex-direction: column;
-	}
-
-	#logo {
-		letter-spacing: 0;
-	}
-
-	/* Nav */
-
-	#menu {
-		font-size: 100%;
-	}
-
-	#menu ul {
-		width: auto;
-	}
-
-	#menu li {
-		display: list-item;
-		width: auto;
-	}
-
-	#menu li:not(:first-child):before {
-		content: "";
-	}
-
-
-	.sticky+.content {
-		padding-top: 90px;
-	}
-
-	/* Dropdown menu */
-
-	.dropdown-content {
-		min-width: 150px;
-		top: 70%;
-		margin-left: -70px;
-	}
-
-	/* Homepage */
-
-	#hero-area {
-		background: url('../images/home-page-smaller.jpg');
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: center;
-		height: 300px;
-		max-width: 400px;
-		border: solid #333333 2px;
-		padding: 3px;
-	}
-
-	#hero-text {
-		height: 320px;
-		width: 400px;
-		padding: 5px;
-		top: 620px;
-		left: 50%;
-		right: 50%;
-		transform: translate(-50%, -50%);
-		text-align: center;
-
-	}
-
-	#learn-more {
-		margin-top: 30px;
-		margin-left: 38px;
-	}
-
-
-/* About page */
-
-#about-menu h2 {
-
-	padding: 10px 10px 0px 10px;
-}
-
-/* Classes used across page */
-
-.sections-headers {
-	padding: 20px;
-}
-
-	.solid-background {
-		width: 400px;
-		padding: 40px 5px 40px 5px;
-		
-	}
-
-	.solid-orange {
-		width: 400px;
-		font-size: 1.2rem;
-		line-height: 110%;
-		color: black;
-	}
-
-
-	.square-image {
-		width: 80px;
-		height: 80px;
-		margin: 1px;
-		padding: 1px;
-	}
-
-	/* What is sensory play? */
-
-	.right-align {
-		width: 230px;
-		padding: 0px;
-		margin: 1px;
-		font-size: 1.25rem;
-		color: black;
-		line-height: 110%;
-	}
-
-	.left-align {
-		width: 230px;
-		padding: 0px;
-		margin: 1px;
-		font-size: 1.25rem;
-        color: black;
-	     line-height: 110%;}
-
-	.senses-info-left {
-		width: 400px;
-	}
-
-	.senses-info-right {
-		width: 400px;
-	}
-
-	/* Play in Motion */
-	#iframe {
-		width: 300px;
-		height: 250px;
-	}
-
-	/* Top 10 Activities */
-	#top10-pane {
-		width: 400px;
-	}
-
-	.activities-style {
-		width: 300px;
-	}
-
-	.activities-style h6 {
-		color: black;
-		font-size: 1.1rem;
-		letter-spacing: normal;
-		
-	}
-
-	.activities-style p {
-		color: black;
-		font-size: 1.25rem;
-		
-	}
-
-	.play-image-internal {
-		margin: 100px 30px;
-	}
-
-
-	/* Help with Anxiety */
-	#anxiety-img {
-		width: 300px;
-		height: 220px;
-	}
-
-	#anxiety-pane {
-		width: 400px;
-	}
-
-
-	.anxiety-activity {
-		width: 80px;
-		height: 80px;
-	}
-
-	/* Tooltip */
-
-	.tooltip .tooltiptext {
-		width: 150px;
-		margin-left: -80px;
-	}
-
-	/* Hear from Each Other */
-
-	.profile-pictures {
-		width: 50px;
-		height: 50px;
-	}
-
-	.feed-sub {
-		width: 400px;
-	}
-
-	.feedback-section {
-		width: 400px;
-		grid-template-columns: auto;
-	}
-
-	.feedback-grid {
-		width: 380px;
-		height: 120px;
-		font-size: 1em;
-		text-align: center;
-		padding: 10px;
-		margin: 0 auto;
-	}
-
-
-	/* Get In Touch */
 
 	#contact-us-heading h3 {
 		padding: 20px 10px 30px 20px;
@@ -1787,5 +1442,719 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
 	.radio-feedback {
 		margin: 3px;
+	}
+
+	@media screen and (max-width: 873px) {
+
+		/* Default styling */
+		html {
+			font-size: 55%;
+		}
+
+		/* About page */
+		/* Classes used across page */
+
+		.solid-background {
+			width: 650px;
+		}
+
+		.solid-orange {
+			line-height: 100%;
+		}
+
+		.square-image {
+			width: 150px;
+			height: 150px;
+		}
+
+		/* What is sensory play? */
+		.right-align {
+			width: 400px;
+			line-height: 100%;
+		}
+
+		.left-align {
+			width: 400px;
+			line-height: 100%;
+		}
+
+		.senses-info-left {
+			width: 650px;
+		}
+
+		.senses-info-right {
+			width: 650px;
+		}
+
+		/* Play in Motion */
+		#iframe {
+			width: 500px;
+			height: 400px;
+		}
+
+		/* Top 10 Activities */
+		#top10-pane {
+			width: 650px;
+		}
+
+		.activities-style {
+			width: 400px;
+		}
+
+		.play-image-internal {
+			margin: 100px 30px;
+		}
+
+
+		/* Help with Anxiety */
+		#anxiety-img {
+			width: 450px;
+			height: 300px;
+		}
+
+		#anxiety-pane {
+			width: 650px;
+		}
+
+
+		.anxiety-activity {
+			width: 150px;
+			height: 150px;
+		}
+
+
+		/* Hear from Each Other */
+
+		.feed-sub {
+			width: 650px;
+		}
+
+		.feedback-section {
+			width: 650px;
+		}
+
+		.feedback-grid {
+			width: 300px;
+			height: 240px;
+			padding: 8px 5px 5px 5px;
+			margin: 8px 3px 3px 5px;
+		}
+	}
+
+	@media screen and (max-width: 720px) {
+
+		/* Default styling */
+		html {
+			font-size: 50%;
+		}
+
+		/* Header */
+
+		#header {
+			width: 100%;
+			height: auto;
+			display: flex;
+			flex-direction: column;
+		}
+
+		#logo {
+			letter-spacing: 0;
+		}
+
+		/* Nav */
+
+
+		#menu ul {
+			width: auto;
+		}
+
+		#menu li {
+			display: list-item;
+			width: auto;
+			padding: 3px;
+		}
+
+		#menu li:not(:first-child):before {
+			content: "";
+		}
+
+
+		.sticky+.content {
+			padding-top: 140px;
+		}
+
+		/* Dropdown menu */
+
+		.dropdown-content {
+			min-width: 150px;
+			top: 70%;
+			margin-left: -75px;
+			font-size: .8em;
+		}
+
+		.dropdown-content a {
+			padding: 6px 8px;
+			text-align: center;
+		}
+
+		/* Homepage */
+
+		#hero-area {
+			background: url('../images/home-page-smaller.jpg');
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-position: center;
+			height: 300px;
+			max-width: 400px;
+			border: solid #333333 2px;
+			padding: 50px 3px 0px 3px;
+		}
+
+		/* About page */
+
+		#about-menu h2 {
+
+			padding: 10px 10px 0px 10px;
+		}
+
+		/* Classes used across page */
+
+		.sections-headers {
+			padding: 20px;
+			width: 400px;
+			margin: 0 auto;
+		}
+
+		.solid-background {
+			width: 400px;
+			padding: 20px 5px 20px 5px;
+			line-height: 110%;
+			display: flex;
+			flex-direction: column;
+
+		}
+
+		.solid-orange {
+			width: 400px;
+			font-size: 1.2rem;
+			line-height: 110%;
+			color: black;
+		}
+
+
+		.square-image {
+			width: 80px;
+			height: 80px;
+			margin: 1px;
+			padding: 1px;
+		}
+
+		/* What is sensory play? */
+
+		.right-align {
+			width: 400px;
+			padding: 15px 0px 0px 0px;
+			margin: 1px;
+			font-size: 1.3rem;
+			color: black;
+			line-height: 110%;
+			float: none;
+			text-align: center;
+		}
+
+		.left-align {
+			width: 400px;
+			padding: 15px 0px 0px 0px;
+			margin: 1px;
+			font-size: 1.3rem;
+			color: black;
+			line-height: 110%;
+			float: none;
+			text-align: center;
+		}
+
+		.senses-info-left {
+			width: 400px;
+			text-align: center;
+		}
+
+		.senses-info-right {
+			width: 400px;
+			text-align: center;
+		}
+
+		.play-by-pic {
+			margin: 0 auto;
+
+		}
+
+		/* Play in Motion */
+		#iframe {
+			width: 300px;
+			height: 250px;
+			margin: 0 auto;
+		}
+
+		/* Top 10 Activities */
+		#top10-pane {
+			width: 400px;
+			flex-direction: column;
+		}
+
+		.activities-style {
+			width: 400px;
+		}
+
+		.activities-style h6 {
+			color: black;
+			font-size: 1.1rem;
+			letter-spacing: normal;
+
+		}
+
+		.activities-style p {
+			color: black;
+			font-size: 1.25rem;
+
+		}
+
+		#play-images {
+			display: flex;
+			flex-direction: row;
+		}
+
+		.play-image-internal {
+			margin: 10px 10px;
+		}
+
+
+		/* Help with Anxiety */
+		#anxiety-img {
+			width: 300px;
+			height: 220px;
+		}
+
+		#anxiety-pane {
+			width: 400px;
+			height: fit-content;
+			padding: 10px 5px;
+		}
+
+
+		.anxiety-activity {
+			width: 80px;
+			height: 80px;
+		}
+
+		/* Tooltip */
+
+		.tooltip {
+			font-size: .8em;
+		}
+
+		.tooltip .tooltiptext {
+			width: 150px;
+			margin-left: -80px;
+			font-size: .9em;
+		}
+
+		/* Hear from Each Other */
+
+		.profile-pictures {
+			width: 50px;
+			height: 50px;
+		}
+
+		.feed-sub {
+			width: 400px;
+		}
+
+		.feedback-section {
+			width: 400px;
+			grid-template-columns: auto;
+		}
+
+		.feedback-grid {
+			width: 380px;
+			height: 120px;
+			font-size: 1em;
+			text-align: center;
+			padding: 10px;
+			margin: 0 auto;
+		}
+	}
+
+	@media screen and (max-width: 506px) {
+
+		h1,
+		h2,
+		h3,
+		h6 {
+			letter-spacing: 1px;
+			font-size: 1em;
+		}
+
+		#logo {
+			font-size: 1.2em;
+		}
+
+		/* Footer */
+
+		/* Social media icons */
+
+		footer ul {
+			text-align: center;
+			display: flex;
+			flex-direction: column;
+		}
+
+		/* Homepage */
+
+		#hero-area {
+			max-width: 250px;
+		}
+
+		#hero-text {
+			max-width: 250px;
+			font-size: 1.2em;
+			padding: 0px;
+			margin: 0px;
+		}
+
+
+		/* About page */
+
+
+		/* Classes used across page */
+
+		.sections-headers {
+			width: 250px;
+		}
+
+		.solid-background {
+			width: 250px;
+		}
+
+		.solid-orange {
+			width: 250px;
+		}
+
+
+
+		/* What is sensory play? */
+
+		.right-align {
+			width: 250px;
+		}
+
+		.left-align {
+			width: 250px;
+		}
+
+		.senses-info-left {
+			width: 250px;
+		}
+
+		.senses-info-right {
+			width: 250px;
+		}
+
+		/* Play in Motion */
+		#iframe {
+			width: 200px;
+			height: 150px;
+		}
+
+		/* Top 10 Activities */
+		#top10-pane {
+			width: 250px;
+		}
+
+		.activities-style {
+			width: 250px;
+		}
+
+		#play-images {
+			width: 250px;
+			padding: 0px;
+			margin: 0px;
+		}
+
+		.play-image-internal {
+			padding: 1px;
+			margin: 2px;
+		}
+
+		/* Help with Anxiety */
+		#anxiety-img {
+			width: 250px;
+			height: 270px;
+		}
+
+		#anxiety-pane {
+			width: 250px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			align-content: center;
+		}
+
+		.grid-figure {
+			padding: 0px;
+			width: 240px;
+			padding-top: 5px;
+			padding-bottom: 5px;
+		}
+
+		.anxiety-activity {
+			padding: 3px;
+			margin: 0 auto;
+		}
+
+		/* Hear from Each Other */
+
+		#feedback-heading {
+			width: 250px;
+			margin: 0 auto;
+		}
+
+		.profile-pictures {
+			width: 50px;
+			height: 50px;
+		}
+
+		.feed-sub {
+			width: 250px;
+		}
+
+		.feedback-section {
+			width: 250px;
+		}
+
+		.feedback-grid {
+			width: 210px;
+			height: 280px;
+			vertical-align: middle;
+		}
+
+		/* Get In Touch */
+
+		#contact-us-heading {
+			width: 250px;
+			margin: 0 auto;
+			padding: 10px;
+		}
+
+		#contact-us-heading h3 {
+			padding: 10px;
+			width: 220px;
+			margin: 0 auto;
+		}
+
+		#contact-us-area {
+			height: 900px;
+			width: 250px;
+		}
+
+		#young-boy-sandpit {
+			visibility: visible;
+			height: 250px;
+			width: 250px;
+		}
+
+		/* Form */
+
+		#form-background {
+			width: 250px;
+			padding: 10px 30px 10px 10px;
+			top: 0px;
+			left: -30px;
+		}
+
+		#radio-feedback-area {
+			padding: 10px;
+		}
+
+		.radio-feedback {
+			margin: 3px;
+		}
+
+	}
+
+	@media screen and (max-width: 300px) {
+
+		/* Default styling */
+		html {
+			font-size: 40%;
+		}
+
+		/* Homepage */
+
+		#hero-area {
+			max-width: 150px;
+			height: 180px;
+			padding-bottom: 0px;
+		}
+
+		#hero-text {
+			max-width: 150px;
+			font-size: 1.3em;
+			padding-top: 0px;
+		}
+
+
+		/* About page */
+
+
+		/* Classes used across page */
+
+		.sections-headers {
+			width: 150px;
+		}
+
+		.solid-background {
+			width: 150px;
+		}
+
+		.solid-orange {
+			width: 150px;
+		}
+
+
+
+		/* What is sensory play? */
+
+		.right-align {
+			width: 150px;
+		}
+
+		.left-align {
+			width: 150px;
+		}
+
+		.senses-info-left {
+			width: 150px;
+		}
+
+		.senses-info-right {
+			width: 150px;
+		}
+
+		/* Play in Motion */
+		#iframe {
+			width: 120px;
+			height: 150px;
+		}
+
+		/* Top 10 Activities */
+		#top10-pane {
+			width: 150px;
+		}
+
+		.activities-style {
+			width: 150px;
+		}
+
+		#play-images {
+			width: 150px;
+			display: flex;
+			flex-direction: column;
+		}
+
+		.play-image-internal {
+			padding: 1px;
+			margin: 1px;
+		}
+
+		/* Help with Anxiety */
+		#anxiety-img {
+			width: 150px;
+			height: 170px;
+		}
+
+		#anxiety-pane {
+			width: 150px;
+
+		}
+
+		.grid-figure {
+			width: 140px;
+		}
+
+
+		/* Hear from Each Other */
+
+		#feedback-heading {
+			width: 150px;
+		}
+
+		.profile-pictures {
+			width: 30px;
+			height: 30px;
+		}
+
+		.feed-sub {
+			width: 150px;
+		}
+
+		.feedback-section {
+			width: 150px;
+		}
+
+		.feedback-grid {
+			width: 110px;
+			height: 410px;
+			vertical-align: middle;
+		}
+
+		/* Get In Touch */
+
+		#contact-us-heading {
+			width: 150px;
+			margin: 0 auto;
+			padding: 10px;
+		}
+
+		#contact-us-heading h3 {
+			padding: 10px;
+			width: 120px;
+			margin: 0 auto;
+		}
+
+		#contact-us-area {
+			height: 1000px;
+			width: 150px;
+		}
+
+		#young-boy-sandpit {
+			visibility: visible;
+			height: 150px;
+			width: 150px;
+		}
+
+		/* Form */
+
+		#form-background {
+			display: flexbox;
+			width: 150px;
+			padding: 25px 40px 25px 25px;
+			top: 500px;
+			font-size: .9em;
+			left: 50%;
+			right: 50%;
+			transform: translate(-50%, -50%);
+			
+		}
+
+		#radio-feedback-area {
+			padding: 10px;
+			font-size: .8em;
+		}
+
+		.radio-feedback {
+			margin: 3px;
+		}
+
 	}
 }
