--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -313,8 +313,8 @@ footer li {
 
 .solid-orange {
 	background-color: #E8A87C;
-	line-height: 200%;
-	font-size: 1.8rem;
+	line-height: 170%;
+	font-size: 1.9rem;
 }
 
 .solid-blue {
@@ -353,8 +353,8 @@ footer li {
 	float: right;
 	padding-right: 35px;
 	padding-top: 20px;
-	line-height: 200%;
-	font-size: 1.8rem;
+	line-height: 170%;
+	font-size: 1.9rem;
 }
 
 .left-align {
@@ -362,8 +362,8 @@ footer li {
 	text-align: left;
 	float: left;
 	padding: 20px 20px 0px 35px;
-	line-height: 200%;
-	font-size: 1.8rem;
+	line-height: 170%;
+	font-size: 1.9rem;
 }
 
 .play-by-pic {
@@ -433,14 +433,16 @@ footer li {
 	margin: 5px 5px 5px 0;
 	width: 500px;
 	padding: 10px;
-	font-size: 1.8rem;
+	font-size: 1.9rem;
+	line-height: 150%;
 }
 
 .activities-style h4 {
 	font-family: Montserrat, sans-serif;
 	font-weight: 900;
 	font-style: italic;
-	font-size: 1.5rem;
+	font-size: 1.6rem;
+	line-height: 150%;
 }
 
 
@@ -701,11 +703,11 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 @media screen and (max-width: 6000px) {
 	/* Default*/
 	html {
-		font-size: 100%;
+		font-size: 150%;
 	}
 	/* Header */
 	#header {
-		height: 100px;
+		height: 180px;
 	}
 	/* Navigation menu */
 	/* Dropdown menu */
@@ -724,10 +726,10 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 	}
 	/* Footer */
 	footer {
-		height: 180px;
+		height: 280px;
 	}
 	#footer-logo {
-		width: 150px;
+		width: 200px;
 		border: solid #DFDCD9 5px;
 		padding-top: 10px;
 	}
@@ -735,7 +737,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 	#hero-area {
 		background: url('../images/home-page-large.jpg');
 		width: 100%;
-		height: 2000px;
+		height: 3000px;
 		background-repeat: no-repeat;
 		background-size: cover;
 	}
@@ -743,8 +745,8 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 		top: 500px;
 		left: 200px;
 		width: 950px;
-		height: 600px;
-		padding: 150px 40px 0px 40px;
+		height: fit-content;
+		padding: 150px 40px 100px 40px;
 		margin: auto 0;
 	}
 	#learn-more {
@@ -762,9 +764,13 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 	/* What is sensory play? */
 	.right-align {
 		width: 1500px;
+		font-size: 1.8em;
+		line-height: 130%;
 	}
 	.left-align {
 		width: 1500px;
+		font-size: 1.8em;
+		line-height: 130%;
 	}
 	.senses-info-left {
 		width: 2000px;
@@ -832,7 +838,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 		width: 2000px;
 	}
 	.feedback-section {
-		border-bottom: 40px #fff solid;
+		border-bottom: none;
 	}
 	.profile-pictures {
 		width: 100px;
@@ -845,12 +851,13 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 	}
 	/* Get In Touch */
 	#contact-us-area {
-		height: 1350px;
+		height: 2000px;
+		border-bottom: none;
 	}
 	/* Form */
 	#form-background {
 		height: fit-content;
-		width: 1200px;
+		width: 1500px;
 		bottom: 12%;
 		right: 5%;
 	}
@@ -928,9 +935,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 		.solid-background {
 			width: 1000px;
 		}
-		.solid-orange {
-			line-height: 130%;
-		}
 		.square-image {
 			width: 300px;
 			height: 300px;
@@ -940,12 +944,10 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 			width: 600px;
 			padding-right: 10px;
 			padding-top: 10px;
-			line-height: 130%;
 		}
 		.left-align {
 			width: 600px;
 			padding: 10px 10px 0px 10px;
-			line-height: 130%;
 		}
 		.senses-info-left {
 			width: 1000px;
@@ -1064,10 +1066,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 			padding: 10px 30px;
 		}
 		@media screen and (max-width: 2400px) {
-			/* Default styling */
-			html {
-				font-size: 62.5%;
-			}
+		
 			/* Header */
 			#header {
 				height: 75px;
@@ -1087,18 +1086,18 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 			}
 			/* Footer */
 			footer {
-				height: 100px;
+				height: 110px;
 			}
 			/* Home page */
 			#hero-area {
-				height: 800px;
+				height: 1200px;
 				border-bottom: solid white 10px;
 			}
 			#hero-text {
-				height: 450px;
+				height: fit-content;
 				width: 400px;
-				padding-top: 10px;
-				padding-bottom: 2px;
+				padding-top: 30px;
+				padding-bottom: 50px;
 				top: 350px;
 				left: 40px;
 			}
@@ -1106,6 +1105,22 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 				margin: 30px 20px 0 20px;
 			}
 			/* About page */
+
+			.solid-orange {
+				line-height: 150%;
+				font-size: 1.7em;
+			}
+
+			.right-align {
+				line-height: 150%;
+				font-size: 1.7em;
+			}
+
+			.left-align {
+				line-height: 150%;
+				font-size: 1.7em;
+			}
+
 			/* Top 10 Activities */
 			.play-image-internal {
 				margin: 0px 25px 60px 25px;
@@ -1155,6 +1170,12 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 		/* Hear from Each Other */
 		.feedback-grid {
 			height: 180px;
+		}
+		/* Get In Touch */
+		#contact-us-area{
+			padding-top: 0px;
+			padding-bottom: 100px;
+			border-bottom: 30px white solid;
 		}
 	}
 }
@@ -1360,7 +1381,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 		@media screen and (max-width: 720px) {
 			/* Default styling */
 			html {
-				font-size: 50%;
+				font-size: 55%;
 			}
 			/* Header */
 			#header {
@@ -1371,6 +1392,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 			}
 			#logo {
 				letter-spacing: 0;
+				padding: 8px;
 			}
 			/* Nav */
 			#menu ul {
