--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -41,7 +41,7 @@ a {
 /* Header */
 
 #header {
-  background-color: #44b3a5;
+  background-color: darkcyan;
   width: 100%;
   height: 75px;
   left: 0;
